<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder" />

            <EditText
                android:id="@+id/normalAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:ems="16"
                android:hint="@string/accHint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/popUpAgreementWebView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/agreement"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/inGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inGame" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>