<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/accountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/upgradeAccTextView"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="30dp"
                        android:text="@string/passwordTextView"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passwordRepeatTextView"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/upgradeAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/goone_textfield"
                        android:ems="10" />

                    <EditText
                        android:id="@+id/upgradePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/goone_textfield"
                        android:ems="10"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/repeatPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/goone_textfield"
                        android:ems="10"
                        android:inputType="textPassword" />


                    <TextView
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/registerReminder"
                        android:textSize="15sp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@id/popUpAgreementWebView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/upgradeInGame"
                    android:layout_marginTop="20dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/goone_textfield"
                    android:text="@string/upgradeTextView"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>