<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    android:padding="20dp" >

    <ImageView
        android:id="@+id/GameoneImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/g1" />

    <LinearLayout
        android:id="@+id/cornersId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners_bg"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/loginAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:ems="10"
                android:hint="@string/accHint" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/normalLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="登錄" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="註冊" />
            <Button
                android:id="@+id/upgradeAccFromLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/upgradeMessage" />
            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdPartyIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherLogin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/facebookLogin"
                android:background="@drawable/facebook_icon"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/facebookAuthLogin"
                android:visibility="gone"
                android:layout_width="30dp"
                android:layout_height="30dp" />


			<!--
            <ImageButton
                android:id="@+id/googleLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/google" />-->
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout> <!-- src -->
