<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountTextView"
                    style="@style/CustomFont"
                />

                <EditText
                    android:id="@+id/loginAcc"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/goone_textfield"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordTextView"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/goone_textfield"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="20dp">


                <Button
                    android:id="@+id/normalLogin"
                    android:layout_marginTop="20dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/goone_textfield"
                    android:text="@string/normalLoginTextView"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>


                <TextView
                    android:id ="@+id/thirdPartyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingBottom="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/thirdPartyReminderTextView"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:id="@+id/facebookLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:background="@drawable/goone_rectangle">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/facebook_icon"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebookLoginTextView"
                        android:layout_marginLeft="5dp"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebookAuthLogin"
                        android:visibility="gone"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                </LinearLayout>



            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout><!--android:background="@mipmap/sdklogin1"
        //android:scaleType = "centerCrop"-->

    <!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gameone_sdk_logo"
            android:scaleType="fitXY" />

    </LinearLayout>-->

    <!--
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:background="@drawable/ic_action_navigation_arrow_back" />
    -->

    <!--android:background="@drawable/background" -->
