<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="horizontal"
        android:padding="20dp"
        android:scaleType="centerCrop">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@mipmap/arrowback"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/gameone_sdk_logo" />

        <ImageButton
            android:id="@+id/prefButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@mipmap/toolbox" />


        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ToggleButton
                    android:id="@+id/btnVistorLogin"
                    android:layout_width="114dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_selector"
                    android:textOff="@string/btnVistor"
                    android:textOn="@string/btnVistor"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/btnVistorUpgrade"
                    android:layout_width="114dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_selector"
                    android:textOff="@string/btnVistorUpgrade"
                    android:textOn="@string/btnVistorUpgrade"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ToggleButton
                    android:id="@+id/btnLogin"
                    android:layout_width="114dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_selector"
                    android:textOff="@string/btnNormalLogin"
                    android:textOn="@string/btnNormalLogin"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <ToggleButton
                    android:id="@+id/btnNormalRegister"
                    android:layout_width="114dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_selector"
                    android:textOff="@string/btnNormalRegister"
                    android:textOn="@string/btnNormalRegister"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/loginLayout">

        </FrameLayout>

    </RelativeLayout>


</ScrollView>


    <!--
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </FrameLayout>

    </ScrollView>-->